--- a/react/index.html
+++ b/react/index.html
@@ -7,6 +7,7 @@
     <title>Research App</title>
   </head>
   <body>
+    /render/Num1/Num2
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
